changing margins, font sizes, and background color

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <h1>Rock, Paper, Scissors</h1>
     <div class="header">
         <div class="pscore">Player Score: <span id="pscore">0</span></div>
-        <div class="cscore">Computer Score: <span id="cscore">0</span></div>
+        <div class="cscore">Cpu Score: <span id="cscore">0</span></div>
         <div class="msg"><strong id="msg">Shoot!</strong></div>
     </div>
     <div class="choice">
